--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 /yarn-error.log
 
 .byebug_history
+/public/packs
+/public/packs-test
+/node_modules
+spec/examples.txt
+yarn-debug.log*
+.yarn-integrity
+.history/
